# Raytracer

./: .gitignore  CMakeLists.txt
src/: main.cpp  sdl_wrappers.cpp  sdl_wrappers.h
src/RT/: Array2D.h  Camera.cpp  Camera.h  Material.h  Math.cpp  Math.h  Random.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Shape.h  Types.h
src/RT/Materials/: Diffuse.cpp  Diffuse.h  Light.cpp  Light.h  Mirror.cpp  Mirror.h
src/RT/Shapes/: Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
